--- a/image-testing/ImageTesting.ipynb
+++ b/image-testing/ImageTesting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import cv2\n",
     "import random\n",
     "import math\n",
+    "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import imshow\n",
     "from PIL import Image\n",
     "from sklearn import preprocessing\n",
@@ -318,6 +319,13 @@
     "print(\"img_scaled[0][0] = %s\" % (img_scaled[0][0]))\n",
     "imshow(img_scaled)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
