--- a/image-testing/ImageTesting.ipynb
+++ b/image-testing/ImageTesting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,23 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "height = 240, width = 320\n"
+      "height = 240, width = 320\n",
+      "img shape = (240, 320, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24b53023860>"
+       "<matplotlib.image.AxesImage at 0x15310e99208>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -59,8 +60,9 @@
    ],
    "source": [
     "# preview the image, image details\n",
-    "print(\"height = %s, width = %s\" % (img.height, img.width))\n",
     "img = Image.open(image)\n",
+    "print(\"height = %s, width = %s\" % (img.height, img.width))\n",
+    "print(\"img shape = %s\" % str(np.asarray(img).shape))\n",
     "imshow(np.asarray(img))"
    ]
   },
