--- a/image-testing/ImageTesting.ipynb
+++ b/image-testing/ImageTesting.ipynb
@@ -24,24 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "height = 240, width = 320\n",
+      "height = 240, width = 320, mode = RGB\n",
       "img shape = (240, 320, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15310e99208>"
+       "<matplotlib.image.AxesImage at 0x15310f380b8>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -61,7 +61,7 @@
    "source": [
     "# preview the image, image details\n",
     "img = Image.open(image)\n",
-    "print(\"height = %s, width = %s\" % (img.height, img.width))\n",
+    "print(\"height = %s, width = %s, mode = %s\" % (img.height, img.width, img.mode))\n",
     "print(\"img shape = %s\" % str(np.asarray(img).shape))\n",
     "imshow(np.asarray(img))"
    ]
