iad analysis work - PCA

--- a/analysis/iad_analysis.ipynb
+++ b/analysis/iad_analysis.ipynb
@@ -3217,204 +3217,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_train = os.path.join(base_dir, 'train_100_4_100.csv')\n",
-    "input_test = os.path.join(base_dir, 'test_4_100.csv')\n",
-    "\n",
-    "train = []\n",
-    "test = []\n",
-    "\n",
-    "with open(input_train, newline='') as train_fd:\n",
-    "    reader = csv.reader(train_fd)\n",
-    "    for row in reader:\n",
-    "        train.append(row)\n",
-    "\n",
-    "with open(input_test, newline='') as test_fd:\n",
-    "    reader = csv.reader(test_fd)\n",
-    "    for row in reader:\n",
-    "        test.append(row)\n",
-    "\n",
-    "random.shuffle(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num_features = 100\n"
-     ]
-    }
-   ],
-   "source": [
-    "tf.reset_default_graph()\n",
-    "sess = tf.InteractiveSession()\n",
-    "\n",
-    "# setup tensorflow model\n",
-    "num_features = len(train[0]) - 1\n",
-    "print(\"num_features = %s\" % num_features)\n",
-    "x = tf.placeholder(tf.float32, [None, num_features])\n",
-    "y_ = tf.placeholder(tf.int32)\n",
-    "y_true = tf.one_hot(y_, 101)\n",
-    "\n",
-    "# weights and biases\n",
-    "W = tf.Variable(tf.zeros([num_features, 101]))\n",
-    "b = tf.Variable(tf.zeros([101]))\n",
-    "\n",
-    "tf.global_variables_initializer().run()\n",
-    "\n",
-    "model = tf.matmul(x, W) + b\n",
-    "\n",
-    "cross_entropy = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits_v2(logits=model, labels=y_true))\n",
-    "train_step = tf.train.GradientDescentOptimizer(0.5).minimize(cross_entropy)\n",
-    "\n",
-    "# model evaluation\n",
-    "y_true_class = tf.argmax(y_true, axis=0)\n",
-    "y_pred = tf.nn.softmax(model)\n",
-    "y_pred_class = tf.argmax(y_pred, axis=0)\n",
-    "\n",
-    "correct_prediction = tf.equal(y_pred_class, y_true_class)\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "########################\n",
+      "Start layer 0, n_components 2\n",
+      "########################\n",
+      "num_features = 2\n",
+      "begin training\n",
       "0 - 0\n",
-      "0 - 10000\n",
-      "0 - 20000\n",
-      "0 - 30000\n",
-      "0 - 40000\n",
-      "0 - 50000\n",
-      "0 - 60000\n",
-      "0 - 70000\n",
-      "0 - 80000\n",
-      "0 - 90000\n",
-      "0 - 100000\n",
-      "1 - 0\n",
-      "1 - 10000\n",
-      "1 - 20000\n",
-      "1 - 30000\n",
-      "1 - 40000\n",
-      "1 - 50000\n",
-      "1 - 60000\n",
-      "1 - 70000\n",
-      "1 - 80000\n",
-      "1 - 90000\n",
-      "1 - 100000\n",
-      "2 - 0\n",
-      "2 - 10000\n",
-      "2 - 20000\n",
-      "2 - 30000\n",
-      "2 - 40000\n",
-      "2 - 50000\n",
-      "2 - 60000\n",
-      "2 - 70000\n",
-      "2 - 80000\n",
-      "2 - 90000\n",
-      "2 - 100000\n",
-      "3 - 0\n",
-      "3 - 10000\n",
-      "3 - 20000\n",
-      "3 - 30000\n",
-      "3 - 40000\n",
-      "3 - 50000\n",
-      "3 - 60000\n",
-      "3 - 70000\n",
-      "3 - 80000\n",
-      "3 - 90000\n",
-      "3 - 100000\n",
-      "4 - 0\n",
-      "4 - 10000\n",
-      "4 - 20000\n",
-      "4 - 30000\n",
-      "4 - 40000\n",
-      "4 - 50000\n",
-      "4 - 60000\n",
-      "4 - 70000\n",
-      "4 - 80000\n",
-      "4 - 90000\n",
-      "4 - 100000\n"
+      "0 - 10000\n"
      ]
     }
    ],
    "source": [
-    "# train the model\n",
-    "epochs = 5\n",
-    "for e in range(0, epochs):\n",
-    "    for i, t in enumerate(train):\n",
-    "        t = [float(i) for i in t]\n",
-    "        X_batch = np.asarray(t[1:])\n",
-    "        X_batch = np.expand_dims(X_batch, 0)\n",
-    "        y_batch = int(t[0])\n",
-    "        sess.run(train_step, feed_dict={x: X_batch, y_: y_batch})\n",
-    "        if i % 10000 == 0:\n",
-    "            print(\"%s - %s\" % (e, i))\n",
-    "    random.shuffle(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 - 1.0\n",
-      "1000 - 0.0\n",
-      "2000 - 0.0\n",
-      "3000 - 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# test the model\n",
-    "cumulative_accuracy = 0.0\n",
-    "for i, t in enumerate(test):\n",
-    "    t = [float(i) for i in t]\n",
-    "    X_batch = np.asarray(t[1:])\n",
-    "    X_batch = np.expand_dims(X_batch, 0)\n",
-    "    y_batch = int(t[0])\n",
-    "    accuracy_out = sess.run(accuracy, feed_dict={x: X_batch, y_: y_batch})\n",
-    "    cumulative_accuracy += accuracy_out\n",
-    "    if i % 1000 == 0:\n",
-    "        print(\"%s - %s\" % (i, accuracy_out))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.011342734518700184"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cumulative_accuracy / len(test)"
+    "# [[layer, n, accuracy]]\n",
+    "accuracies = []\n",
+    "for layer in layers:\n",
+    "    for n in range(2, 101):\n",
+    "        print(\"########################\")\n",
+    "        print(\"Start layer %s, n_components %s\" % (layer, n))\n",
+    "        print(\"########################\")\n",
+    "        input_train = os.path.join(base_dir, 'train_100_%s_%s.csv' % (layer, n))\n",
+    "        input_test = os.path.join(base_dir, 'test_%s_%s.csv' % (layer, n))\n",
+    "\n",
+    "        train = []\n",
+    "        test = []\n",
+    "\n",
+    "        with open(input_train, newline='') as train_fd:\n",
+    "            reader = csv.reader(train_fd)\n",
+    "            for row in reader:\n",
+    "                train.append(row)\n",
+    "\n",
+    "        with open(input_test, newline='') as test_fd:\n",
+    "            reader = csv.reader(test_fd)\n",
+    "            for row in reader:\n",
+    "                test.append(row)\n",
+    "\n",
+    "        random.shuffle(train)\n",
+    "\n",
+    "        # create tensorflow computational graph\n",
+    "        tf.reset_default_graph()\n",
+    "        sess = tf.InteractiveSession()\n",
+    "\n",
+    "        # setup tensorflow model\n",
+    "        num_features = len(train[0]) - 1\n",
+    "        print(\"num_features = %s\" % num_features)\n",
+    "        x = tf.placeholder(tf.float32, [None, num_features])\n",
+    "        y_ = tf.placeholder(tf.int32)\n",
+    "        y_true = tf.one_hot(y_, 101)\n",
+    "\n",
+    "        # weights and biases\n",
+    "        W = tf.Variable(tf.zeros([num_features, 101]))\n",
+    "        b = tf.Variable(tf.zeros([101]))\n",
+    "\n",
+    "        model = tf.matmul(x, W) + b\n",
+    "\n",
+    "        loss = tf.reduce_mean(\n",
+    "            tf.nn.softmax_cross_entropy_with_logits(logits=model, labels=y_true))\n",
+    "        optimizer = tf.train.AdamOptimizer(learning_rate=0.001)\n",
+    "        train_step = optimizer.minimize(loss)\n",
+    "\n",
+    "        # model evaluation\n",
+    "        y_true_class = tf.argmax(y_true, axis=0)\n",
+    "        y_pred = tf.nn.softmax(model)\n",
+    "        y_pred_class = tf.argmax(y_pred, axis=0)\n",
+    "\n",
+    "        correct_prediction = tf.equal(y_pred_class, y_true_class)\n",
+    "        accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "        \n",
+    "        tf.global_variables_initializer().run()\n",
+    "        \n",
+    "        # train the model\n",
+    "        print(\"begin training\")\n",
+    "        epochs = 5\n",
+    "        for e in range(0, epochs):\n",
+    "            for i, t in enumerate(train):\n",
+    "                t = [float(i) for i in t]\n",
+    "                X_batch = np.asarray(t[1:])\n",
+    "                X_batch = np.expand_dims(X_batch, 0)\n",
+    "                y_batch = int(t[0])\n",
+    "                sess.run(train_step, feed_dict={x: X_batch, y_: y_batch})\n",
+    "                if i % 10000 == 0:\n",
+    "                    print(\"%s - %s\" % (e, i))\n",
+    "            random.shuffle(train)\n",
+    "        \n",
+    "        # test the model\n",
+    "        print(\"begin testing\")\n",
+    "        cumulative_accuracy = 0.0\n",
+    "        for i, t in enumerate(test):\n",
+    "            t = [float(i) for i in t]\n",
+    "            X_batch = np.asarray(t[1:])\n",
+    "            X_batch = np.expand_dims(X_batch, 0)\n",
+    "            y_batch = int(t[0])\n",
+    "            accuracy_out = sess.run(accuracy, feed_dict={x: X_batch, y_: y_batch})\n",
+    "            cumulative_accuracy += accuracy_out\n",
+    "            if i % 1000 == 0:\n",
+    "                print(\"%s - %s\" % (i, accuracy_out))\n",
+    "        print(\"Done, accuracy = %.04f\" % (cumulative_accuracy / len(test)))\n",
+    "        \n",
+    "        accuracies.append([layer, n, cumulative_accuracy / len(test)])"
    ]
   },
   {
