--- a/analysis/iad_analysis.ipynb
+++ b/analysis/iad_analysis.ipynb
@@ -13073,7 +13073,196 @@
       "########################\n",
       "num_features = 7\n",
       "begin training\n",
-      "0 - 10000 - 0.0 - y_true_class = [82 56 89 57 61  7 58 35 89 40], y_pred_class = [ 1 29 61 89 99 29 60 41 60  1]\n"
+      "0 - 10000 - 0.0 - y_true_class = [82 56 89 57 61  7 58 35 89 40], y_pred_class = [ 1 29 61 89 99 29 60 41 60  1]\n",
+      "0 - 20000 - 0.0 - y_true_class = [64 84 60 62 55 24 41 66 72 84], y_pred_class = [60 16 78 60 21 41 16 41 61 99]\n",
+      "0 - 30000 - 0.0 - y_true_class = [40 15 87 60 28  5  6 15 11 36], y_pred_class = [60 41 60 58 60 16 58 60 64 58]\n",
+      "0 - 40000 - 0.0 - y_true_class = [60 99 83 99 38 65 26 27 23 47], y_pred_class = [41 58 41 16 60 64 60 62 35 41]\n",
+      "0 - 50000 - 0.0 - y_true_class = [ 7 50 89 30 54  4 18 48 79 42], y_pred_class = [41 43 16 41 16 60  0 41 16 35]\n",
+      "0 - 60000 - 0.0 - y_true_class = [27 13 69 99 45 87 93 79 16 87], y_pred_class = [23 58 58 41 58 35 77 58 58 58]\n",
+      "0 - 70000 - 0.0 - y_true_class = [88 60  0 98 10 64 37 33 47  0], y_pred_class = [35 58 58 62 16 16 62 58 16 58]\n",
+      "0 - 80000 - 0.0 - y_true_class = [78 68 49 78 84 25 45 32 96 74], y_pred_class = [62 23 23 41 60 23 62 62 16 41]\n",
+      "0 - 90000 - 0.0 - y_true_class = [91 51  0 41 96 56 60 92 15 98], y_pred_class = [58 58 58 23 58 58 58 58 58 58]\n",
+      "0 - 100000 - 0.0 - y_true_class = [79 80 42 61  1 35 84 91 49 50], y_pred_class = [48 62 60 91 91 62 26 58 58 83]\n",
+      "1 - 10000 - 0.0 - y_true_class = [ 59  36   0 100  67  25  51  22  79  83], y_pred_class = [41 35 16 62 35 58 41 16 60 58]\n",
+      "1 - 20000 - 0.0 - y_true_class = [ 44 100  84   9  83  40   7  47  74   7], y_pred_class = [26 58 16 41 16 58 16 41 77 16]\n",
+      "1 - 30000 - 0.1 - y_true_class = [60  1 30 42 31 62 20 13 48  3], y_pred_class = [60 58 91 58 91 58 35 60 58 58]\n",
+      "1 - 40000 - 0.0 - y_true_class = [86 56 69 67 51 59 77 46 98  8], y_pred_class = [41 16 58 16 41 41 41 60 58 41]\n",
+      "1 - 50000 - 0.0 - y_true_class = [98 59 36 39 34  7 12 29 42 11], y_pred_class = [16 62 58 16 48 58 58 23 48 62]\n",
+      "1 - 60000 - 0.0 - y_true_class = [37 70 38 30  9 53 47  8 60 62], y_pred_class = [62 35 58 91 59 41 60 62 62 58]\n",
+      "1 - 70000 - 0.0 - y_true_class = [48 79  6 89 80 20 60 38 12 13], y_pred_class = [91 91 67 67 91 16 16 48 61 67]\n",
+      "1 - 80000 - 0.0 - y_true_class = [97 76 19 42 67 64 49 58 86 45], y_pred_class = [91 62 58 35 58 58 91 61 41 26]\n",
+      "1 - 90000 - 0.0 - y_true_class = [34 25 34 39 45 61 35 32  4 69], y_pred_class = [60 58 41 91 60 99 60 58 16 60]\n",
+      "1 - 100000 - 0.0 - y_true_class = [55 16 79 84 20 70 97 39 76 61], y_pred_class = [35 58 91 60 23 60 60  9 41  9]\n",
+      "2 - 10000 - 0.0 - y_true_class = [ 15  70   6  91  46  28  38 100  83  68], y_pred_class = [23 59 60 59 60 60 60 91 58 16]\n",
+      "2 - 20000 - 0.0 - y_true_class = [27 12 34 18 36 34 33 10 33 27], y_pred_class = [62 59 16 62 26 59 83 16 73  9]\n",
+      "2 - 30000 - 0.1 - y_true_class = [84 11 55 23 24 67 78 60 30 19], y_pred_class = [16 91 16 59 91 58 16 60 91 62]\n",
+      "2 - 40000 - 0.0 - y_true_class = [62 25  7 30 46 59 55 40  4 26], y_pred_class = [58 16 16 23 16 70 62 62 91 70]\n",
+      "2 - 50000 - 0.0 - y_true_class = [77 34  9 22  7 35 35 16 68 57], y_pred_class = [41 62 16 58 23 70 43 58 41 61]\n",
+      "2 - 60000 - 0.0 - y_true_class = [41 44 67 31 44 77 47 82  3 13], y_pred_class = [62 58 35 41 91 58 58 41 58 62]\n",
+      "2 - 70000 - 0.0 - y_true_class = [41 26 45 30 61 93 54 11  2  9], y_pred_class = [16 41 41 41 16 41 41 41 16 60]\n",
+      "2 - 80000 - 0.0 - y_true_class = [36 95 11 85 97 28 28 66 86 87], y_pred_class = [41 41 61 41 41 41 41  9 41 62]\n",
+      "2 - 90000 - 0.0 - y_true_class = [11 53 45 40 80 59 81 25 92 83], y_pred_class = [58 58 58 58 62 41 16 58 41 41]\n",
+      "2 - 100000 - 0.0 - y_true_class = [92 28 39 85 35 19 68 47 67 48], y_pred_class = [67 58 60 62 58  0 58 58 58 60]\n",
+      "3 - 10000 - 0.0 - y_true_class = [25 39  7 88 75  1 19 22 33 51], y_pred_class = [62 41 58 35 77 58 60 41 15 58]\n",
+      "3 - 20000 - 0.0 - y_true_class = [79 67  1 53 94 93 47 69 27 52], y_pred_class = [58 16 35 58 35 16 70 41 61 91]\n",
+      "3 - 30000 - 0.0 - y_true_class = [14 64 41  2 23 75  4 15 80 45], y_pred_class = [62 58 58 58 58 91 91 58 58 91]\n",
+      "3 - 40000 - 0.0 - y_true_class = [82 79 81 84  9 75 10 61 96 21], y_pred_class = [62 41 60 41 62 60 16 16 91 91]\n",
+      "3 - 50000 - 0.0 - y_true_class = [54 70 49 73 43  5  5 37 46 80], y_pred_class = [67 91 58 15 91 60 91 91 91 16]\n",
+      "3 - 60000 - 0.0 - y_true_class = [ 86  34  98  39  26   2  75  47 100  93], y_pred_class = [58 91 16 58 58 58 91 58 91 91]\n",
+      "3 - 70000 - 0.0 - y_true_class = [32 88 88 63 76 66 53  6 10 83], y_pred_class = [58 58 61 48 23 61 23 91 61 16]\n",
+      "3 - 80000 - 0.0 - y_true_class = [44 98 82 40 70 75 83 87 42 92], y_pred_class = [16 62 58 23 58 58 35 83 35 58]\n",
+      "3 - 90000 - 0.1 - y_true_class = [97 21 47 11  5 47  2 58  9 18], y_pred_class = [23 35 60 62 62 41 62 58 61 16]\n",
+      "3 - 100000 - 0.0 - y_true_class = [90 84 58  5 41 93 54 71 36 61], y_pred_class = [23 58 60 60 23 59 23 67 59 23]\n",
+      "4 - 10000 - 0.0 - y_true_class = [ 27  26  76  67  38  47  35 100  82  96], y_pred_class = [16 60 60 60 41 60 16 83 77 41]\n",
+      "4 - 20000 - 0.0 - y_true_class = [77 56 32 82 53 97 63 85 99 93], y_pred_class = [62 60 41 58 16 16 60 60 67 41]\n",
+      "4 - 30000 - 0.0 - y_true_class = [94 98 96 62 40 28 75 64 19 30], y_pred_class = [62 16 58 60 41 16 70 60 41 58]\n",
+      "4 - 40000 - 0.0 - y_true_class = [ 7 21 31 32 10 89 45 99 53 38], y_pred_class = [58 60 62 60 16 60 23 62 35 23]\n",
+      "4 - 50000 - 0.0 - y_true_class = [25 84 71  5  4 33 74 64 74 59], y_pred_class = [62 61 58 60 62 61 62 60 58 58]\n",
+      "4 - 60000 - 0.0 - y_true_class = [77 88 55 15  0 64 22 10 59 55], y_pred_class = [58 23 67 60 60 58 58 91 16 58]\n",
+      "4 - 70000 - 0.1 - y_true_class = [81 79 98 79 29 75 58 34  5 87], y_pred_class = [60 48 60 23 23 23 58 64 60 58]\n",
+      "4 - 80000 - 0.0 - y_true_class = [71 92 66 44 62 73 89 67 31 86], y_pred_class = [ 9 23 16 41 41  9 41 16 77 41]\n",
+      "4 - 90000 - 0.0 - y_true_class = [32  4 51 60 87 91 58 52 86 97], y_pred_class = [16 91 58 16 60 58 59 58 16 16]\n",
+      "4 - 100000 - 0.0 - y_true_class = [42 99 87 49 55 32 67 11 62 84], y_pred_class = [26 77 61 58 70 16 58 16 16 41]\n",
+      "begin testing\n",
+      "100 - 0.0 - y_true_class = [2 3], y_pred_class = [61 99]\n",
+      "200 - 0.0 - y_true_class = [5 5], y_pred_class = [16 26]\n",
+      "300 - 0.0 - y_true_class = [7 7], y_pred_class = [77 61]\n",
+      "400 - 0.0 - y_true_class = [11 11], y_pred_class = [35 35]\n",
+      "500 - 0.0 - y_true_class = [14 14], y_pred_class = [58 58]\n",
+      "600 - 0.0 - y_true_class = [17 17], y_pred_class = [58 58]\n",
+      "700 - 0.0 - y_true_class = [20 20], y_pred_class = [62 35]\n",
+      "800 - 0.0 - y_true_class = [23 23], y_pred_class = [61 58]\n",
+      "900 - 0.0 - y_true_class = [25 25], y_pred_class = [ 0 58]\n",
+      "1000 - 0.0 - y_true_class = [28 28], y_pred_class = [61 99]\n",
+      "1100 - 0.0 - y_true_class = [31 31], y_pred_class = [77 58]\n",
+      "1200 - 0.0 - y_true_class = [35 35], y_pred_class = [62 62]\n",
+      "1300 - 0.0 - y_true_class = [38 38], y_pred_class = [58 16]\n",
+      "1400 - 0.0 - y_true_class = [41 41], y_pred_class = [58 16]\n",
+      "1500 - 0.0 - y_true_class = [44 44], y_pred_class = [35 16]\n",
+      "1600 - 0.0 - y_true_class = [46 46], y_pred_class = [58 26]\n",
+      "1700 - 0.0 - y_true_class = [50 50], y_pred_class = [77 16]\n",
+      "1800 - 0.0 - y_true_class = [53 53], y_pred_class = [35 58]\n",
+      "1900 - 0.0 - y_true_class = [56 56], y_pred_class = [77 16]\n",
+      "2000 - 0.0 - y_true_class = [60 60], y_pred_class = [16 77]\n",
+      "2100 - 0.0 - y_true_class = [62 63], y_pred_class = [77 58]\n",
+      "2200 - 0.0 - y_true_class = [66 66], y_pred_class = [26 77]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2300 - 0.0 - y_true_class = [69 69], y_pred_class = [41 58]\n",
+      "2400 - 0.0 - y_true_class = [73 73], y_pred_class = [58 35]\n",
+      "2500 - 0.0 - y_true_class = [75 75], y_pred_class = [16 61]\n",
+      "2600 - 0.0 - y_true_class = [78 78], y_pred_class = [16 16]\n",
+      "2700 - 0.0 - y_true_class = [81 82], y_pred_class = [16 58]\n",
+      "2800 - 0.0 - y_true_class = [85 85], y_pred_class = [58 61]\n",
+      "2900 - 0.0 - y_true_class = [89 89], y_pred_class = [58 58]\n",
+      "3000 - 0.0 - y_true_class = [92 92], y_pred_class = [58 58]\n",
+      "3100 - 0.0 - y_true_class = [95 95], y_pred_class = [58 58]\n",
+      "3200 - 0.0 - y_true_class = [99 99], y_pred_class = [61 58]\n",
+      "Done, cumulative_accuracy = 21.5000, accuracy = 0.0132\n",
+      "########################\n",
+      "Start layer 1, n_components 8\n",
+      "########################\n",
+      "num_features = 8\n",
+      "begin training\n",
+      "0 - 10000 - 0.0 - y_true_class = [67 64 22 41 70  2 25 95 70 23], y_pred_class = [26 59 32 58 25  0 43 62 12 80]\n",
+      "0 - 20000 - 0.0 - y_true_class = [27 54 75 84 91 10 15  9 20 67], y_pred_class = [23 61 58 58 23 67 61 58 59 58]\n",
+      "0 - 30000 - 0.0 - y_true_class = [21 83 52 49 79 84 70 77 84 37], y_pred_class = [ 0 23 23 91 58 60 99 40 43 59]\n",
+      "0 - 40000 - 0.0 - y_true_class = [ 2 41  4 46 26 28 80 46 84  3], y_pred_class = [99 23 10 10 61 58 26 15 21  9]\n",
+      "0 - 50000 - 0.0 - y_true_class = [64 97 42 18 36 86 56  1 35 15], y_pred_class = [26 61 41 35 61 16 41 23 58 61]\n",
+      "0 - 60000 - 0.0 - y_true_class = [39 55 60 49 84 79 16  5 86 40], y_pred_class = [58 67 58 58 91 16 67 91 60 58]\n",
+      "0 - 70000 - 0.0 - y_true_class = [ 45 100  16  32  27  62  14  18  88  60], y_pred_class = [21 60 60 35 58 60 35 58 21 62]\n",
+      "0 - 80000 - 0.0 - y_true_class = [41 46 80 76 10 90 59 58 53 59], y_pred_class = [91 41 60 23 58 58 91 26 16 70]\n",
+      "0 - 90000 - 0.0 - y_true_class = [86 72 98 65 37 18 44 67  5 58], y_pred_class = [58 58 23 62 41 58 41 58 60 41]\n",
+      "0 - 100000 - 0.0 - y_true_class = [32 63 10 77 46 27 60 55 99 19], y_pred_class = [62 26 58 16 23 62 16 23 58 58]\n",
+      "1 - 10000 - 0.0 - y_true_class = [78 50 18 83 65 89 28 22 59  8], y_pred_class = [35 58 62 16 16 16 16 35 58 60]\n",
+      "1 - 20000 - 0.1 - y_true_class = [34 31 50 72 59 85 91 58 63  6], y_pred_class = [58 16 16 58 58 26 23 58 62 58]\n",
+      "1 - 30000 - 0.0 - y_true_class = [51 71 22 31 92 20 43 40 29 14], y_pred_class = [62 16 58 62 58 58 58 23 23 91]\n",
+      "1 - 40000 - 0.0 - y_true_class = [22 13 98 79 23 41 28 85 71 22], y_pred_class = [60 58 16 26 26 58 58 58 58 15]\n",
+      "1 - 50000 - 0.1 - y_true_class = [32 75  6  6 70 62 97 48  0 56], y_pred_class = [62 58 41 62 16 62 60 16 61 21]\n",
+      "1 - 60000 - 0.0 - y_true_class = [ 8 60 14  9 35 85  1 58 38 31], y_pred_class = [58 58 16 15 91 67 73 26 60 60]\n",
+      "1 - 70000 - 0.0 - y_true_class = [81 70 70 94 73 43 26 80 36 77], y_pred_class = [58 58 16 91 58 91 16 91 58 58]\n",
+      "1 - 80000 - 0.0 - y_true_class = [ 4 70 65 24 11 47 31 91  5 16], y_pred_class = [58 41  6 60 67 16 60 16 58 58]\n",
+      "1 - 90000 - 0.0 - y_true_class = [48 17 13 86 78 40 33 55 57 38], y_pred_class = [60 16 60 60 60 59 16 41 60 60]\n",
+      "1 - 100000 - 0.0 - y_true_class = [32  1 97 11 36 33 18 56 75 99], y_pred_class = [62 58 16 41 58 58 23 41 58 41]\n",
+      "2 - 10000 - 0.0 - y_true_class = [54  8 64 33 71 37 38 82 22 33], y_pred_class = [60 35 60 58 67 62 61 59 23 91]\n",
+      "2 - 20000 - 0.0 - y_true_class = [81 59 16 78 11 12  8 22 60 24], y_pred_class = [61 41 23 23 61 23 62 35 41 60]\n",
+      "2 - 30000 - 0.0 - y_true_class = [95 30 20 12 35 74 83 84  5 37], y_pred_class = [60 60 23 60 61 62 61 60 16 60]\n",
+      "2 - 40000 - 0.0 - y_true_class = [67 77 44 93 67 94 62  2 52 47], y_pred_class = [58 58 62 23 41  6 35 23 60 62]\n",
+      "2 - 50000 - 0.1 - y_true_class = [36  7 49 42  9  2  4 58 53  0], y_pred_class = [15 58 15 15 58 91 91 58 16 58]\n",
+      "2 - 60000 - 0.0 - y_true_class = [26 88 38 14 20 61 45 54 93 32], y_pred_class = [91 73 23 91 41 91 60 60 16 58]\n",
+      "2 - 70000 - 0.0 - y_true_class = [30  1 48 21 76 69  4 49 51 21], y_pred_class = [23 16 58 91 58  2 58 11 32 41]\n",
+      "2 - 80000 - 0.1 - y_true_class = [49 78 59 23 90 29 15 33  6 65], y_pred_class = [26 58 41 59 41 26 58 16  6 23]\n",
+      "2 - 90000 - 0.0 - y_true_class = [90 37 83 91 54 23 76 21 89  6], y_pred_class = [58 58 41 60 91 15 41 60 60 58]\n",
+      "2 - 100000 - 0.0 - y_true_class = [56 83 46 22 73 25 38 69 66 38], y_pred_class = [58 35 41 16 58 62 41 58 58 16]\n",
+      "3 - 10000 - 0.0 - y_true_class = [21 21 11 75 38 16 60 49 44 98], y_pred_class = [83 84 62 16  2 58 26 60 16 16]\n",
+      "3 - 20000 - 0.0 - y_true_class = [40 68 84 42 40 59 23 29 68 15], y_pred_class = [41 16 60 23 16 61 60 41 60 16]\n",
+      "3 - 30000 - 0.0 - y_true_class = [99 68 28 16 74 20 68 49 59 40], y_pred_class = [61 41 15 59 61 23 23 60 15 15]\n",
+      "3 - 40000 - 0.0 - y_true_class = [12 89 35 49 63 13 91 46  8 48], y_pred_class = [16 35 41 58 58 58 58 60 41 58]\n",
+      "3 - 50000 - 0.1 - y_true_class = [11 55 48 71 27 26 62 95 32 55], y_pred_class = [41 91 58 41 41 26 60 41 16 61]\n",
+      "3 - 60000 - 0.0 - y_true_class = [54 82 14  9 11 45 75 81 48 40], y_pred_class = [58 58 59 58 58 23  0 23 23 23]\n",
+      "3 - 70000 - 0.0 - y_true_class = [67 53 42 47 41  9 53 87 89 60], y_pred_class = [61 58 58 58 58 58 41  0 58 23]\n",
+      "3 - 80000 - 0.0 - y_true_class = [87 66 16 44 45 32 88 99  8 48], y_pred_class = [58 58 58  8 58 77 23 91 35 91]\n",
+      "3 - 90000 - 0.1 - y_true_class = [59  3 62 93  1  4 59 16 28 98], y_pred_class = [ 6 62 62 62 41 23 16 62 91 91]\n",
+      "3 - 100000 - 0.0 - y_true_class = [79 12 55 30 73 12  7  2 99 43], y_pred_class = [41 58  6 62 67 41 60 16 41 62]\n",
+      "4 - 10000 - 0.0 - y_true_class = [ 30  62  97 100  80  39  47  14   5  86], y_pred_class = [41 60 62 62  6  6 58 16 67  6]\n",
+      "4 - 20000 - 0.0 - y_true_class = [56 96 12 83 31 86 35 43  9 99], y_pred_class = [58 58 23 61 23 67 91 15 23 35]\n",
+      "4 - 30000 - 0.1 - y_true_class = [57 41  9 64 16 99 11 45 54 41], y_pred_class = [ 6 41 41 23 60 77 41  6 41 60]\n",
+      "4 - 40000 - 0.0 - y_true_class = [ 2 51 67  9  4 11 44  9 46 38], y_pred_class = [41 23 58 60 41 60 58 41 58 16]\n",
+      "4 - 50000 - 0.0 - y_true_class = [ 1 34 47 83 98 82 99 79 57 72], y_pred_class = [41 41 23 91 58 77 60 41 41 23]\n",
+      "4 - 60000 - 0.0 - y_true_class = [53 87 78 55 32 32 12 57 95 49], y_pred_class = [60 58 58 16 23 62 91 60 58 73]\n",
+      "4 - 70000 - 0.0 - y_true_class = [79 17 79 55 69 76 41 12 76 89], y_pred_class = [16 58 60 23 58 23 16 58 60 58]\n",
+      "4 - 80000 - 0.0 - y_true_class = [65  9 14 82 97 32 50 71 72 24], y_pred_class = [60 58 62 41 35 58 60 61 58 35]\n",
+      "4 - 90000 - 0.0 - y_true_class = [41 53 39 57 23 95 77 25 67 53], y_pred_class = [16 58 62 62 62 58 58 62 41 62]\n",
+      "4 - 100000 - 0.0 - y_true_class = [77  4 35 58  2 75 53 40 54  5], y_pred_class = [58 58 91 62 58 35 35 58 16 41]\n",
+      "begin testing\n",
+      "100 - 0.0 - y_true_class = [2 3], y_pred_class = [58 58]\n",
+      "200 - 0.0 - y_true_class = [5 5], y_pred_class = [16 35]\n",
+      "300 - 0.0 - y_true_class = [7 7], y_pred_class = [77 62]\n",
+      "400 - 0.0 - y_true_class = [11 11], y_pred_class = [35 35]\n",
+      "500 - 0.0 - y_true_class = [14 14], y_pred_class = [60 16]\n",
+      "600 - 0.0 - y_true_class = [17 17], y_pred_class = [58 16]\n",
+      "700 - 0.0 - y_true_class = [20 20], y_pred_class = [62 35]\n",
+      "800 - 0.0 - y_true_class = [23 23], y_pred_class = [62 58]\n",
+      "900 - 0.0 - y_true_class = [25 25], y_pred_class = [91 58]\n",
+      "1000 - 0.0 - y_true_class = [28 28], y_pred_class = [62 16]\n",
+      "1100 - 0.0 - y_true_class = [31 31], y_pred_class = [77 61]\n",
+      "1200 - 0.0 - y_true_class = [35 35], y_pred_class = [62 91]\n",
+      "1300 - 0.0 - y_true_class = [38 38], y_pred_class = [58 16]\n",
+      "1400 - 0.0 - y_true_class = [41 41], y_pred_class = [16 60]\n",
+      "1500 - 0.0 - y_true_class = [44 44], y_pred_class = [35 60]\n",
+      "1600 - 0.0 - y_true_class = [46 46], y_pred_class = [58 35]\n",
+      "1700 - 0.0 - y_true_class = [50 50], y_pred_class = [41 16]\n",
+      "1800 - 0.0 - y_true_class = [53 53], y_pred_class = [35  2]\n",
+      "1900 - 0.0 - y_true_class = [56 56], y_pred_class = [59 16]\n",
+      "2000 - 0.0 - y_true_class = [60 60], y_pred_class = [35 64]\n",
+      "2100 - 0.0 - y_true_class = [62 63], y_pred_class = [91 58]\n",
+      "2200 - 0.0 - y_true_class = [66 66], y_pred_class = [11 59]\n",
+      "2300 - 0.0 - y_true_class = [69 69], y_pred_class = [91 58]\n",
+      "2400 - 0.0 - y_true_class = [73 73], y_pred_class = [58 35]\n",
+      "2500 - 0.0 - y_true_class = [75 75], y_pred_class = [58 62]\n",
+      "2600 - 0.0 - y_true_class = [78 78], y_pred_class = [60 16]\n",
+      "2700 - 0.0 - y_true_class = [81 82], y_pred_class = [16 58]\n",
+      "2800 - 0.0 - y_true_class = [85 85], y_pred_class = [58 58]\n",
+      "2900 - 0.0 - y_true_class = [89 89], y_pred_class = [58 58]\n",
+      "3000 - 0.0 - y_true_class = [92 92], y_pred_class = [ 2 70]\n",
+      "3100 - 0.0 - y_true_class = [95 95], y_pred_class = [58 16]\n",
+      "3200 - 0.0 - y_true_class = [99 99], y_pred_class = [61 16]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done, cumulative_accuracy = 21.0000, accuracy = 0.0129\n",
+      "########################\n",
+      "Start layer 1, n_components 9\n",
+      "########################\n",
+      "num_features = 9\n",
+      "begin training\n"
      ]
     }
    ],
